--- a/index.html
+++ b/index.html
@@ -35,5 +35,8 @@
             </pre>
         </li>
         <li>Media URL: The URL of the multimedia you want to extract the subtitles from</li>
+        <li>Name: FileName</li>
+        <li>Language: LanguageCode</li>
+        <li>Words: List of comma-separated values that are more likely to appear in your media</li>
     </ul>
 </body>
