Forced white background to fix display on dark browsers

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <script src="./script.js"></script>
 </head>
 
-<body>
+<body style="background-color: #FFFFFF">
     Back-end URL<span style="color: red;">*</span>:
     <input id="back" type="text" />
     Media URL<span style="color: red;">*</span>:
