--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <head>
+    <script src="./lib/UrlSearchParams.js"></script>
     <script src="./script.js"></script>
     <link rel="stylesheet" href="./styles.css">
 </head>
