Reordered page layout
Fixes #1

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
         <textarea id="speech"></textarea>
     </div>
     <div class="row">
-        OnlyDownload: 
+        OnlyDownload:
         <input type="checkbox" id="down" onclick="switchOnlyDownload()"></input>
     </div>
     <br />
-    <div class="row output">
-        Output:
-        <textarea id="out" style="width: 45%; height: 20%;"></textarea>
+    Output:
+    <textarea class="row output" id="out"></textarea>
+    <div class="row">
         <button id="button" onclick="makeRequest()">Generate SRT</button>
         <a id="link">Download file</a>
     </div>
