Added possibility to send a file instead of a URL
Fixes #10

--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
     <div class="row">
         Back-end URL<span style="color: red;">*</span>:
         <input id="back" type="text" />
-        Media URL<span style="color: red;">*</span>:
+    </div>
+    <div class="row">
+        <div style="padding-bottom: 5px;">You have to either upload your file or provide a URL where the file is:<span style="color: red;">*</span></div>
+        Media URL:
         <input id="media" type="text" />
+        <input id="file" type="file"/>
     </div>
     <div class="row">
         Name<span style="color: red;">*</span>:
