Added initial CountryCode combo

--- a/index.html
+++ b/index.html
@@ -10,16 +10,138 @@
         <input id="back" type="text" />
     </div>
     <div class="row">
-        <div style="padding-bottom: 5px;">You have to either upload your file or provide a URL where the file is:<span style="color: red;">*</span></div>
+        <div style="padding-bottom: 5px;">You have to either upload your file or provide a URL where the file is:<span
+                style="color: red;">*</span></div>
         Media URL:
         <input id="media" type="text" />
-        <input id="file" type="file"/>
+        <input id="file" type="file" />
     </div>
     <div class="row">
         Name<span style="color: red;">*</span>:
         <input id="name" type="text" />
         Language:
-        <input id="language" type="text" />
+        <select id="language">
+            <option value="af-ZA">Afrikaans (South Africa)</option>
+            <option value="am-ET">Amharic (Ethiopia)</option>
+            <option value="hy-AM">Armenian (Armenia)</option>
+            <option value="az-AZ">Azerbaijani (Azerbaijan)</option>
+            <option value="id-ID">Indonesian (Indonesia)</option>
+            <option value="ms-MY">Malay (Malaysia)</option>
+            <option value="bn-BD">Bengali (Bangladesh)</option>
+            <option value="bn-IN">Bengali (India)</option>
+            <option value="ca-ES">Catalan (Spain)</option>
+            <option value="cs-CZ">Czech (Czech Republic)</option>
+            <option value="da-DK">Danish (Denmark)</option>
+            <option value="de-DE">German (Germany)</option>
+            <option value="en-AU">English (Australia)</option>
+            <option value="en-CA">English (Canada)</option>
+            <option value="en-GH">English (Ghana)</option>
+            <option value="en-GB">English (United Kingdom)</option>
+            <option value="en-IN">English (India)</option>
+            <option value="en-IE">English (Ireland)</option>
+            <option value="en-KE">English (Kenya)</option>
+            <option value="en-NZ">English (New Zealand)</option>
+            <option value="en-NG">English (Nigeria)</option>
+            <option value="en-PH">English (Philippines)</option>
+            <option value="en-SG">English (Singapore)</option>
+            <option value="en-ZA">English (South Africa)</option>
+            <option value="en-TZ">English (Tanzania)</option>
+            <option value="en-US">English (United States)</option>
+            <option value="es-AR">Spanish (Argentina)</option>
+            <option value="es-BO">Spanish (Bolivia)</option>
+            <option value="es-CL">Spanish (Chile)</option>
+            <option value="es-CO">Spanish (Colombia)</option>
+            <option value="es-CR">Spanish (Costa Rica)</option>
+            <option value="es-EC">Spanish (Ecuador)</option>
+            <option value="es-SV">Spanish (El Salvador)</option>
+            <option value="es-ES">Spanish (Spain)</option>
+            <option value="es-US">Spanish (United States)</option>
+            <option value="es-GT">Spanish (Guatemala)</option>
+            <option value="es-HN">Spanish (Honduras)</option>
+            <option value="es-MX">Spanish (Mexico)</option>
+            <option value="es-NI">Spanish (Nicaragua)</option>
+            <option value="es-PA">Spanish (Panama)</option>
+            <option value="es-PY">Spanish (Paraguay)</option>
+            <option value="es-PE">Spanish (Peru)</option>
+            <option value="es-PR">Spanish (Puerto Rico)</option>
+            <option value="es-DO">Spanish (Dominican Republic)</option>
+            <option value="es-UY">Spanish (Uruguay)</option>
+            <option value="es-VE">Spanish (Venezuela)</option>
+            <option value="eu-ES">Basque (Spain)</option>
+            <option value="fil-PH">Filipino (Philippines)</option>
+            <option value="fr-CA">French (Canada)</option>
+            <option value="fr-FR">French (France)</option>
+            <option value="gl-ES">Galician (Spain)</option>
+            <option value="ka-GE">Georgian (Georgia)</option>
+            <option value="gu-IN">Gujarati (India)</option>
+            <option value="hr-HR">Croatian (Croatia)</option>
+            <option value="zu-ZA">Zulu (South Africa)</option>
+            <option value="is-IS">Icelandic (Iceland)</option>
+            <option value="it-IT">Italian (Italy)</option>
+            <option value="jv-ID">Javanese (Indonesia)</option>
+            <option value="kn-IN">Kannada (India)</option>
+            <option value="km-KH">Khmer (Cambodia)</option>
+            <option value="lo-LA">Lao (Laos)</option>
+            <option value="lv-LV">Latvian (Latvia)</option>
+            <option value="lt-LT">Lithuanian (Lithuania)</option>
+            <option value="hu-HU">Hungarian (Hungary)</option>
+            <option value="ml-IN">Malayalam (India)</option>
+            <option value="mr-IN">Marathi (India)</option>
+            <option value="nl-NL">Dutch (Netherlands)</option>
+            <option value="ne-NP">Nepali (Nepal)</option>
+            <option value="nb-NO">Norwegian Bokmål (Norway)</option>
+            <option value="pl-PL">Polish (Poland)</option>
+            <option value="pt-BR">Portuguese (Brazil)</option>
+            <option value="pt-PT">Portuguese (Portugal)</option>
+            <option value="ro-RO">Romanian (Romania)</option>
+            <option value="si-LK">Sinhala (Sri Lanka)</option>
+            <option value="sk-SK">Slovak (Slovakia)</option>
+            <option value="sl-SI">Slovenian (Slovenia)</option>
+            <option value="su-ID">Sundanese (Indonesia)</option>
+            <option value="sw-TZ">Swahili (Tanzania)</option>
+            <option value="sw-KE">Swahili (Kenya)</option>
+            <option value="fi-FI">Finnish (Finland)</option>
+            <option value="sv-SE">Swedish (Sweden)</option>
+            <option value="ta-IN">Tamil (India)</option>
+            <option value="ta-SG">Tamil (Singapore)</option>
+            <option value="ta-LK">Tamil (Sri Lanka)</option>
+            <option value="ta-MY">Tamil (Malaysia)</option>
+            <option value="te-IN">Telugu (India)</option>
+            <option value="vi-VN">Vietnamese (Vietnam)</option>
+            <option value="tr-TR">Turkish (Turkey)</option>
+            <option value="ur-PK">Urdu (Pakistan)</option>
+            <option value="ur-IN">Urdu (India)</option>
+            <option value="el-GR">Greek (Greece)</option>
+            <option value="bg-BG">Bulgarian (Bulgaria)</option>
+            <option value="ru-RU">Russian (Russia)</option>
+            <option value="sr-RS">Serbian (Serbia)</option>
+            <option value="uk-UA">Ukrainian (Ukraine)</option>
+            <option value="he-IL">Hebrew (Israel)</option>
+            <option value="ar-IL">Arabic (Israel)</option>
+            <option value="ar-JO">Arabic (Jordan)</option>
+            <option value="ar-AE">Arabic (United Arab Emirates)</option>
+            <option value="ar-BH">Arabic (Bahrain)</option>
+            <option value="ar-DZ">Arabic (Algeria)</option>
+            <option value="ar-SA">Arabic (Saudi Arabia)</option>
+            <option value="ar-IQ">Arabic (Iraq)</option>
+            <option value="ar-KW">Arabic (Kuwait)</option>
+            <option value="ar-MA">Arabic (Morocco)</option>
+            <option value="ar-TN">Arabic (Tunisia)</option>
+            <option value="ar-OM">Arabic (Oman)</option>
+            <option value="ar-PS">Arabic (State of Palestine)</option>
+            <option value="ar-QA">Arabic (Qatar)</option>
+            <option value="ar-LB">Arabic (Lebanon)</option>
+            <option value="ar-EG">Arabic (Egypt)</option>
+            <option value="fa-IR">Persian (Iran)</option>
+            <option value="hi-IN">Hindi (India)</option>
+            <option value="th-TH">Thai (Thailand)</option>
+            <option value="ko-KR">Korean (South Korea)</option>
+            <option value="zh-TW">Chinese, Mandarin (Traditional, Taiwan)</option>
+            <option value="yue-Hant-H"> Chinese, Cantonese (Traditional, Hong Kong)</option>
+            <option value="ja-JP">Japanese (Japan)</option>
+            <option value="zh-HK">Chinese, Mandarin (Simplified, Hong Kong)</option>
+            <option value="zh-Ch">Chinese, Mandarin (Simplified, China)</option>
+        </select>
         Words:
         <textarea id="speech"></textarea>
     </div>
@@ -54,6 +176,7 @@
         <li>Name: FileName</li>
         <li>Language: LanguageCode</li>
         <li>Words: List of comma-separated values that are more likely to appear in your media</li>
-        <li>OnlyDownload: If set this flag may trigger MP3 download and FLAC conversion/upload on server, but no speech will be generated</li>
+        <li>OnlyDownload: If set this flag may trigger MP3 download and FLAC conversion/upload on server, but no speech
+            will be generated</li>
     </ul>
 </body>
